Added the wordpress theme buffer as a dependency

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }
   ],
   "require": {
-    "php": ">=7.3"
+    "php": ">=7.3",
+    "freekattema/wordpress-theme-buffer": "^1.0"
   },
   "minimum-stability": "dev",
   "license": "proprietary"
